--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banking app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://wallpapercave.com/wp/wp10393355.jpg">
 </head>
 
 <body>
@@ -56,10 +57,9 @@
             </div>
 
         </div>
-
-        
-
     </section>
+
+
 
 </body>
 
