--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
         <div class="topsection">
 
             <div class="banner">
-
-
-                <img src="" alt="">
-
+                <div class="img">
+                    <img src="./advatishment/4.jpg" alt="">
+                </div>
             </div>
 
             <div class="login-box">
                 <form action="">
-                    <h3>Personal Banking Service</h3>
-                    <h2>What Are You Looking For?</h2>
+                    <p>Personal Banking Service</p>
+                    <h2>What Are You Looking For ?</h2>
 
                     <select id="productType" name="productType">
                         <option value="">Select Product Type</option>
@@ -73,9 +72,9 @@
         </div>
     </section>
 
-    <section id="">
-
-    </section>
+    <footer class="footer">
+        <p class="footer-pg">Copy right</p>
+    </footer>
 
 
 
